--- a/src/app/delete-dialog/delete-dialog.component.css
+++ b/src/app/delete-dialog/delete-dialog.component.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=delete-dialog.component.css.map */
+p, button {
+  font-size: 20px;
+}
+/*# sourceMappingURL=delete-dialog.component.css.map */
