--- a/src/app/logout-dialog/logout-dialog.component.css
+++ b/src/app/logout-dialog/logout-dialog.component.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=logout-dialog.component.css.map */
+p, button {
+  font-size: 20px;
+}
+/*# sourceMappingURL=logout-dialog.component.css.map */
