--- a/src/app/add-employee/add-employee.component.css
+++ b/src/app/add-employee/add-employee.component.css
@@ -1,6 +1,6 @@
 .app-module {
   background-color: #ddd;
-  height: 92vh;
+  height: 95.5%;
 }
 
 .app-module .sidenav {
@@ -9,25 +9,35 @@
   width: 15%;
 }
 
-.app-module i {
+.app-module .side-nav-i {
   margin-left: 20px;
   color: white;
-  font-size: 30px;
   display: inline-block;
+  font-size: 30px;
+  cursor: pointer;
 }
 
 .app-module .logout {
-  padding-left: 60px;
-  margin-top: 210%;
-}
-
-.app-module .sidenav a {
-  margin-left: 25px;
-  padding: 15px;
+  cursor: pointer;
+  margin-left: 15px;
   text-decoration: none;
   font-size: 23px;
+  margin-top: 770%;
   color: #9ca08a;
   display: inline-block;
+}
+
+.app-module .side-nav-a-div {
+  display: inline-block;
+  padding-bottom: 20px;
+}
+
+.app-module .side-nav-a {
+  cursor: pointer;
+  margin-left: 25px;
+  font-size: 23px;
+  text-decoration: none;
+  color: #9ca08a;
 }
 
 .app-module .sidenav a:hover {
@@ -37,16 +47,10 @@
 .app-module .add form {
   background-color: white;
   margin-top: 5%;
-  width: 25%;
-  margin-left: 35%;
-  height: 50vh;
-}
-
-.app-module .add form h1 {
-  height: 5vh;
-  color: white;
-  font-family: sans-serif;
-  font-size: 25px;
+  width: 28%;
+  margin-left: auto;
+  margin-right: auto;
+  height: 30rem;
 }
 
 .app-module .add form input {
@@ -55,22 +59,28 @@
 
 .app-module .add form button {
   margin-top: 10px;
-  margin-left: 20%;
+  margin-left: 38%;
+  font-size: 17px;
 }
 
 .app-module .add form .input-field {
-  margin-bottom: 5px;
-  padding-left: 20%;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.app-module .add form .input-field mat-form-field {
+  font-size: 20px;
+  width: 100%;
 }
 
 .app-module .add form h1 {
   width: 100%;
-  height: 7vh;
+  height: 5vh;
   background-color: #676799;
-  padding-left: 22%;
+  text-align: center;
   padding-top: 5px;
   color: white;
   font-family: sans-serif;
-  font-size: 20px;
+  font-size: 25px;
 }
 /*# sourceMappingURL=add-employee.component.css.map */
