--- a/src/app/add-user/add-user.component.scss
+++ b/src/app/add-user/add-user.component.scss
@@ -2,39 +2,147 @@ $page-background-color: rgb(154, 154, 206);
 $form-background-color: #ddd;
 $white: white;
 $form-heading: rgb(144, 127, 219);
+
+
+
 .bg-img {
   background-image: url('/assets/images/plain.jpg');
-  height: 92vh;
+  height: 93.9%;
   background-repeat: no-repeat;
   background-size: 100%;
-
   .register {
-    padding-top: 10px;
+    padding-top: 1%;
     form {
-    background-color: $form-background-color;
-    margin-left: 35%;
-    height: 87.8vh;
-    width: 30%;
-      h1 {
-        height: 6vh;
+      margin-left: auto;
+      margin-right: auto;
+      width: 25%;
+      height: 21rem;
+      background-color: $form-background-color;
+      .header {
+        height: 3rem;
         padding-top: 5px;
         color: $white;
         background-color: $form-heading;
-        padding-left: 18%;
-        font-family: sans-serif;
-        font-size: 30px;
+        h1 {        
+          font-family: sans-serif;
+          font-size: 30px;
+          display: inline-block;
+        }
+        i {
+          cursor: pointer;
+          font-size: 25px;
+          padding-right: 22%;
+          display: inline-block;
+        }
       }
-      input { 
-        height: 3vh;
+        input { 
+          height: 3vh;
+        }
+        .input-field {  
+          mat-form-field {
+            font-size: 20px;
+            width: 100%;
+          }
+          margin-left: 50px;
+          margin-right: 50px;
+        }
+        span {
+          margin-left: 50px;
+          font-size: 15px;
+        }
+        a {
+          font-size: 15px;
+          margin-left: 10px;
+          text-decoration: none;
+        }
+        button {
+          margin-left: 38%;
+          margin-top: 25px; 
+          font-size: 18px;       
+        }
       }
-      button {
-        margin-top: 20px;
-        margin-left: 20%;
+    }
+  }
+
+@media only screen and (min-width:1024px) {
+  .bg-img {
+    background-size: 150%;
+     height: 95.5%;
+     .register {
+       form {
+        height: 47rem;
+       }
+     }
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 768px) and (max-width:1023px)  {
+  .bg-img {
+   background-size: 210%;
+    height: 94.9%;
+    .login {
+      form {
+        height: 21rem;
+        width: 35%;
       }
-      .input-field {
-        margin-bottom: 5px;
-        padding-left: 20%;
-      } 
+    }
+  } 
+}
+
+
+@media only screen and (min-width: 600px) and (max-width:767px) {
+  .bg-img {
+    background-size: 210%;
+    height: 95%;
+    .login {
+      form {
+        width: 42%;
+      }
     }
   }
 }
+
+
+@media only screen and (min-width:321px) and (max-width:599px) {
+  .bg-img {
+    background-size: 390%;
+    height: 96%;
+    .login {
+      form {
+        width: 80%;
+      }
+    }
+  }
+}
+
+//Mobile phones
+@media only screen and (max-width:320px) {
+  .bg-img {
+    background-size: 380%;
+    height: 95%;
+    .login {
+      form {
+        width: 79%;
+        .input-field {  
+          margin-left: 30px;
+          margin-right: 30px;
+        }
+        span {
+          margin-left: 20px;
+          font-size: 8px;
+        }
+        a {
+          font-size: 8px;
+          margin-left: 10px;
+        }
+        button {
+          margin-left: 20px;
+        }
+      }
+    }
+  }
+}
+
+
+
