--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,48 @@
 $page-background-color: rgb(169, 126, 170);
 $white: white;
-h1 {
+.heading {
     text-align: center;
     font-family: sans-serif;;
     background-color: $page-background-color;
     color: $white;
-    padding-top: 8px;
-    border: solid;
-    height: 8vh;
+    padding-top: 25px;
+    height: 2em;
+    font-size: 45px;
     margin: 0;
-    border: unset;
+}
+
+@media only screen and (min-width: 1024px)  {
+  .heading {
+    padding-top: 5px;
+    font-size: 35px;
+    height: 9%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  .heading {
+    padding-top: 5px;
+    font-size: 40px;
+    height: 3em;
+  }
+}
+@media only screen and (min-width: 600px) {
+  .heading {
+    padding-top: 5px;
+    font-size: 20px;
+   height: 3em;
+  }
+}
+@media only screen and (min-width: 320px) {
+  .heading {
+    padding-top: 5px;
+    font-size: 20px;
+    height: 2em;
+  }
+}
+@media only screen and (max-width: 320px) {
+  .heading {
+   height: 2em;
+   padding-top: 5px;
+   font-size: 20px;
+  }
 }
