--- a/src/app/display-employee/display-employee.component.html
+++ b/src/app/display-employee/display-employee.component.html
@@ -1,10 +1,11 @@
 <mat-drawer-container class="app-module">
   <mat-drawer mode="side" opened class="sidenav"> 
-    <i class="material-icons side-nav-i"> group_add</i>
-    <a href="add" >Create</a><br>
-    <i class="material-icons side-nav-i"> playlist_add_circle</i>
-    <a href="display">List</a>  
-    <i (click)="navigateToLogout()" class="material-icons logout">power_settings_new</i>
+    <div class="side-nav-i"><i (click)="navigateToCreate()" class="material-icons "> group_add</i></div>
+    <div class="side-nav-a-div"><a (click)="navigateToCreate()"  class="side-nav-a" >Create</a></div><br>
+    <div class="side-nav-i"><i (click)="navigateToDisplay()" class="material-icons"> playlist_add_circle</i></div>
+    <div class="side-nav-a-div"><a (click)="navigateToDisplay()" class="side-nav-a">List</a> </div><br>
+    <div class="side-nav-i"><i (click)="navigateToLogout()" class="material-icons">power_settings_new</i></div>
+    <div class="side-nav-a-div"><a (click)="navigateToLogout()" class="logout">Logout</a></div>
   </mat-drawer>
   <mat-drawer-content >
     <div class="display"> 
@@ -25,6 +26,10 @@
           <th mat-header-cell *matHeaderCellDef >Phone number</th>
           <td mat-cell *matCellDef="let employee" style="padding-right: 10px;"> {{employee.phone_number}} </td>
         </ng-container>
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef>Email </th>
+          <td mat-cell *matCellDef="let employee"> {{employee.email}} </td>
+        </ng-container>
         <ng-container matColumnDef="Action">
           <th mat-header-cell *matHeaderCellDef>Action</th>
           <td mat-cell *matCellDef="let employee">
@@ -32,8 +37,11 @@
             <i (click)="deleteEmployee(employee.id, employee.name)" class="material-icons red">delete</i> 
           </td>
         </ng-container>  
-        <tr mat-header-row *matHeaderRowDef=" ['id', 'name', 'address', 'phone_number', 'Action']"></tr>
-        <tr mat-row  *matRowDef="let row; columns:  ['id', 'name', 'address', 'phone_number', 'Action'];"></tr>    
+        <!-- <tr mat-header-row *matHeaderRowDef=" ['id', 'name', 'address', 'phone_number', 'Action']"></tr>
+        <tr mat-row  *matRowDef="let row; columns:  ['id', 'name', 'address', 'phone_number', 'Action'];"></tr>     -->
+
+        <tr mat-header-row *matHeaderRowDef=" ['id', 'name', 'address', 'phone_number', 'email', 'Action']"></tr>
+        <tr mat-row  *matRowDef="let row; columns:  ['id', 'name', 'address', 'phone_number', 'email', 'Action'];"></tr>    
       </table>
       <ngb-pagination (pageChange)="onPaginationClick($event)" class="pagination"  *ngIf = "total_count > 10"
         [collectionSize]="total_count"  [(page)]="page" [boundaryLinks]="true">
