--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,78 +1,143 @@
 $page-background-color: rgb(154, 154, 206); 
 $form-background-color: #ddd;
 $white: white;
-$form-heading: rgb(103, 103, 153);
+$form-headig-color: rgb(144, 127, 219);
+$form-heading: rgb(144, 127, 219);
+$lightblack: #616161;
+$blue : blue;
 
 .bg-img {
   background-image: url('/assets/images/plain.jpg');
-  height: 92vh;
+  height: 93.9%;
   background-repeat: no-repeat;
   background-size: 100%;
   .login {
     padding-top: 6%;
     form {
-    background-color: $form-background-color;
-    margin-left: 35%;
-    height: 55vh;
-    width: 30%;
+      margin-left: auto;
+      margin-right: auto;
+      width: 25%;
+      height: 21rem;
+      background-color: $form-background-color;
       h1 {
-        height: 7vh;
+        height: 3rem;
         padding-top: 5px;
         color: $white;
-        background-color: rgb(144, 127, 219);
-        padding-left: 32%;
+        background-color: $form-heading;
+        text-align: center;
         font-family: sans-serif;
         font-size: 30px;
       }
-      input { 
-        height: 3vh;
+      .form-div {
+        input { 
+          height: 3vh;
+        }
+        .input-field {  
+          mat-form-field {
+            font-size: 20px;
+            width: 100%;
+          }
+          margin-left: 50px;
+          margin-right: 50px;
+        }
+        span {
+          margin-left: 50px;
+          font-size: 15px;
+        }
+        a {
+          font-size: 15px;
+          margin-left: 10px;
+          text-decoration: none;
+        }
+        button {
+          font-size: 18px;
+          margin-left: 36%;
+          margin-bottom: 10px;
+          margin-top: 10px;        
+        }
       }
-      button {
-        margin-top: 20px;
-        margin-left: 20%;
-      } 
-      .input-field {
-        margin-bottom: 5px;
-        padding-left: 20%;
-      } 
-      span {
-        padding-left: 50px;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 17px;
-        line-height: 21px;
-        color: #616161;
-      }
-    } 
+    }
   }
 }
 
-// .login {
-//   width: 100%;
+@media only screen and (min-width:1024px) {
+  .bg-img {
+    background-size: 150%;
+    height: 95.5%;
+  }
+}
 
-//   .left {
-//     height: 92vh;
-//     display: inline-block;
-//     width: 40%;
-//     //float:left;
-//     background-color: skyblue;
-//     .bg-img {
-//       background-image: url('/assets/images/photo.jpg');
-//       background-repeat: no-repeat;
-//       background-size: 20%;
-//       padding-top: 6%;
-//       margin :8;
-//     h1 {
-//       padding-top: 40%;
-//       font-size: 36px;
-//       line-height: 36px;
-//       color: #ffffff;
-//     }
-//   }
-//   }
-//   .right {
-//     width: 40%;
-//     display: inline-block;
-//     border: solid;
-//   }
-// }
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 768px) and (max-width:1023px)  {
+  .bg-img {
+   background-size: 210%;
+    height: 95.9%;
+    .login {
+      form {
+        width: 37%;
+      }
+    }
+  } 
+}
+
+
+@media only screen and (min-width: 600px) and (max-width:767px) {
+  .bg-img {
+    background-size: 270%;
+    height: 95.7%;
+    .login {
+      form {
+        width: 42%;
+      }
+    }
+  }
+}
+
+
+@media only screen and (min-width:321px) and (max-width:599px) {
+  .bg-img {
+    background-size: 390%;
+    height: 96%;
+    .login {
+      form {
+        width: 82%;
+      }
+    }
+  }
+}
+
+//Mobile phones
+@media only screen and (max-width:320px) {
+  .bg-img {
+    background-size: 380%;
+    height: 95%;
+    .login {
+      form {
+        width: 83%;
+        height: 21rem;
+        .form-div {
+          .input-field {  
+            margin-left: 30px;
+            margin-right: 30px;
+          }
+          span {
+            margin-left: 20px;
+            font-size: 13px;
+          }
+          a {
+            font-size: 13px;
+            margin-left: 10px;
+          }
+          button {
+            margin-left: 34%;
+          }
+        }
+      }
+    }
+  }
+}
+
+
+
+
+
