--- a/src/app/add-employee/add-employee.component.css
+++ b/src/app/add-employee/add-employee.component.css
@@ -1,56 +1,7 @@
-.app-module {
-  background-color: #ddd;
-  height: 95.5%;
-}
-
-.app-module .sidenav {
-  background-color: #565683;
-  padding-top: 20px;
-  width: 15%;
-}
-
-.app-module .side-nav-i {
-  margin-left: 20px;
-  color: white;
-  display: inline-block;
-  font-size: 30px;
-  cursor: pointer;
-}
-
-.app-module .logout {
-  cursor: pointer;
-  margin-left: 15px;
-  text-decoration: none;
-  font-size: 23px;
-  margin-top: 770%;
-  color: #9ca08a;
-  display: inline-block;
-}
-
-.app-module .side-nav-a-div {
-  display: inline-block;
-  padding-bottom: 20px;
-}
-
-.app-module .side-nav-a {
-  cursor: pointer;
-  margin-left: 25px;
-  font-size: 23px;
-  text-decoration: none;
-  color: #9ca08a;
-}
-
-.app-module .sidenav a:hover {
-  color: #f1f1f1;
-}
-
 .app-module .add form {
-  background-color: white;
-  margin-top: 5%;
-  width: 28%;
-  margin-left: auto;
-  margin-right: auto;
-  height: 30rem;
+  width: 25rem;
+  height: 32rem;
+  background-color: #ddd;
 }
 
 .app-module .add form input {
@@ -58,7 +9,7 @@
 }
 
 .app-module .add form button {
-  margin-top: 10px;
+  margin-top: 20px;
   margin-left: 38%;
   font-size: 17px;
 }
@@ -75,7 +26,7 @@
 
 .app-module .add form h1 {
   width: 100%;
-  height: 5vh;
+  height: 3rem;
   background-color: #676799;
   text-align: center;
   padding-top: 5px;
