--- a/src/app/add-employee/add-employee.component.scss
+++ b/src/app/add-employee/add-employee.component.scss
@@ -1,62 +1,21 @@
-$side_nav-color: rgb(86, 86, 131);
-$side-nav-word-color: #9ca08a;
-$side-nav-word-hover-color: #f1f1f1;
-$white: white;
-$form-background-color:#ddd;
 $form-heading:rgb(103, 103, 153);
-$black: black;
+$form-background-color: #ddd;
+$white: white;
 
-.app-module {
-  background-color: $form-background-color;
-  height: 95.5%;
-  .sidenav {
-    background-color: $side_nav-color;
-    padding-top: 20px;
-    width: 15%;
-  }
-  .side-nav-i {
-    margin-left: 20px;
-    color: $white;
-    display: inline-block;
-    font-size: 30px;
-    cursor: pointer;
-  }
-  .logout {
-    cursor: pointer;
-    margin-left: 15px;    
-    text-decoration: none;
-    font-size: 23px;
-    margin-top: 770%;
-    color: $side-nav-word-color;
-    display: inline-block;
-  }
-  .side-nav-a-div {
-    display: inline-block;
-    padding-bottom: 20px;
-  }
-  .side-nav-a {
-    cursor: pointer;
-    margin-left: 25px;    
-    font-size: 23px;
-    text-decoration: none;
-    color: $side-nav-word-color;
-  }
-  .sidenav a:hover {
-    color: $side-nav-word-hover-color;
-  }
   .add {
-    form {
-      background-color: $white;
-      margin-top: 5%;
-      width: 28%;
-      margin-left: auto;
-      margin-right: auto;
-      height: 30rem;
+    background-color: $form-background-color;
+    max-width: 25rem;
+    margin-left:auto;
+    margin-right:auto;
+    vertical-align:middle;
+    margin-top: 2rem;
+     form {   
+      background-color: $form-background-color;
       input { 
         height: 3vh;
       }
       button {
-        margin-top: 10px;
+        margin-top: 20px;
         margin-left: 38%;
         font-size: 17px;
       }
@@ -70,7 +29,7 @@ $black: black;
       } 
       h1 {
         width: 100%;
-        height: 5vh;
+        height: 3rem;
         background-color: $form-heading;
         text-align: center;
         padding-top: 5px;
@@ -78,6 +37,24 @@ $black: black;
         font-family: sans-serif;
         font-size: 25px;
       } 
+     }
+    }
+    @media only screen and (max-width:360px) {
+      .add {
+         form {  
+          h1 {
+            font-size: 19px;
+          }
+        button {
+         margin-left: 28%;
+       }
+       .input-field {
+        mat-form-field {
+          font-size: 13px;
+        }
+        margin-left: 10px;
+        margin-right: 10px;
+      } 
+         }
     }
   }
-}
