--- a/src/app/add-user/add-user.component.scss
+++ b/src/app/add-user/add-user.component.scss
@@ -3,15 +3,13 @@ $form-background-color: #ddd;
 $white: white;
 $form-heading: rgb(144, 127, 219);
 
-
-
 .bg-img {
   background-image: url('/assets/images/plain.jpg');
-  height: 93.9%;
+  height: 51.7rem;
   background-repeat: no-repeat;
   background-size: 100%;
   .register {
-    padding-top: 1%;
+    padding-top: 2%;
     form {
       margin-left: auto;
       margin-right: auto;
@@ -26,15 +24,17 @@ $form-heading: rgb(144, 127, 219);
         h1 {        
           font-family: sans-serif;
           font-size: 30px;
+          margin-left: 10%;
           display: inline-block;
         }
         i {
           cursor: pointer;
           font-size: 25px;
-          padding-right: 22%;
           display: inline-block;
         }
       }
+      .register-form {
+        padding-top: 10px;
         input { 
           height: 3vh;
         }
@@ -63,14 +63,15 @@ $form-heading: rgb(144, 127, 219);
       }
     }
   }
+}
 
 @media only screen and (min-width:1024px) {
   .bg-img {
     background-size: 150%;
-     height: 95.5%;
      .register {
        form {
-        height: 47rem;
+        width: 34%;
+        height: 46rem;
        }
      }
   }
@@ -79,12 +80,12 @@ $form-heading: rgb(144, 127, 219);
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 768px) and (max-width:1023px)  {
   .bg-img {
-   background-size: 210%;
-    height: 94.9%;
-    .login {
+   background-size: 360%;
+    height: 98rem;
+    .register {
       form {
-        height: 21rem;
-        width: 35%;
+        height: 49.5rem;
+        width: 70%;
       }
     }
   } 
@@ -93,11 +94,12 @@ $form-heading: rgb(144, 127, 219);
 
 @media only screen and (min-width: 600px) and (max-width:767px) {
   .bg-img {
-    background-size: 210%;
-    height: 95%;
-    .login {
+    background-size: 360%;
+    height: 99rem;
+    .register {
       form {
-        width: 42%;
+        width: 65%;
+        height: 47rem;
       }
     }
   }
@@ -106,11 +108,12 @@ $form-heading: rgb(144, 127, 219);
 
 @media only screen and (min-width:321px) and (max-width:599px) {
   .bg-img {
-    background-size: 390%;
-    height: 96%;
-    .login {
+    background-size: 3200%;
+    height: 450rem;
+    .register {
       form {
         width: 80%;
+        height: 47rem;
       }
     }
   }
@@ -119,30 +122,28 @@ $form-heading: rgb(144, 127, 219);
 //Mobile phones
 @media only screen and (max-width:320px) {
   .bg-img {
-    background-size: 380%;
-    height: 95%;
-    .login {
+    background-size: 920%;
+    height: 99rem;
+    .register {
       form {
         width: 79%;
+        height: 47rem;
+        .register-form {
         .input-field {  
           margin-left: 30px;
           margin-right: 30px;
         }
-        span {
-          margin-left: 20px;
-          font-size: 8px;
-        }
-        a {
-          font-size: 8px;
-          margin-left: 10px;
-        }
-        button {
-          margin-left: 20px;
-        }
+      }
+        .header {
+          h1 {        
+            font-family: sans-serif;
+            font-size: 20px;
+            margin-left: 10%;
+            display: inline-block;
+          }
       }
     }
   }
 }
-
-
+}
 
