--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,49 +3,9 @@
   font-family: sans-serif;
   background-color: #a97eaa;
   color: white;
-  padding-top: 25px;
-  height: 2em;
-  font-size: 45px;
+  padding-top: 7px;
+  height: 3rem;
+  font-size: 30px;
   margin: 0;
-}
-
-@media only screen and (min-width: 1024px) {
-  .heading {
-    padding-top: 5px;
-    font-size: 35px;
-    height: 9%;
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 1023px) {
-  .heading {
-    padding-top: 5px;
-    font-size: 40px;
-    height: 3em;
-  }
-}
-
-@media only screen and (min-width: 600px) {
-  .heading {
-    padding-top: 5px;
-    font-size: 20px;
-    height: 3em;
-  }
-}
-
-@media only screen and (min-width: 320px) {
-  .heading {
-    padding-top: 5px;
-    font-size: 20px;
-    height: 2em;
-  }
-}
-
-@media only screen and (max-width: 320px) {
-  .heading {
-    height: 2em;
-    padding-top: 5px;
-    font-size: 20px;
-  }
 }
 /*# sourceMappingURL=app.component.css.map */
