--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 
- <h1 class="heading">Ideas2It Technologies</h1>
- <router-outlet></router-outlet>
+
+<div>
+    <h1 class="heading">Ideas2It Technologies </h1>
+</div>
+<div>
+    <router-outlet></router-outlet>
+</div>
+
+
+
