--- a/src/app/display-employee/display-employee.component.css
+++ b/src/app/display-employee/display-employee.component.css
@@ -1,53 +1,16 @@
 .app-module {
   background-color: white;
-  height: 95.5%;
 }
 
-.app-module .sidenav {
-  background-color: #565683;
-  padding-top: 20px;
-  width: 15%;
-}
-
-.app-module .side-nav-i {
-  margin-left: 20px;
-  color: white;
+.app-module .display {
   display: inline-block;
-  font-size: 30px;
-  cursor: pointer;
-}
-
-.app-module .logout {
-  cursor: pointer;
-  margin-left: 15px;
-  text-decoration: none;
-  font-size: 23px;
-  margin-top: 770%;
-  color: #818181;
-  display: inline-block;
-}
-
-.app-module .side-nav-a-div {
-  display: inline-block;
-  padding-bottom: 20px;
-}
-
-.app-module .side-nav-a {
-  cursor: pointer;
-  margin-left: 25px;
-  font-size: 23px;
-  text-decoration: none;
-  color: #818181;
-}
-
-.app-module .sidenav a:hover {
-  color: #f1f1f1;
+  height: 51rem;
 }
 
 .app-module .display table {
-  margin-left: 15%;
   border: 1px solid #ddd;
   margin-top: 2px;
+  width: 55rem;
 }
 
 .app-module .display td {
@@ -55,7 +18,6 @@
 }
 
 .app-module .display th, .app-module .display td {
-  width: 18.5%;
   font-size: 20px;
 }
 
@@ -81,6 +43,7 @@
 }
 
 .app-module .display i {
+  padding-right: 10px;
   cursor: pointer;
 }
 /*# sourceMappingURL=display-employee.component.css.map */
