--- a/src/app/display-employee/display-employee.component.scss
+++ b/src/app/display-employee/display-employee.component.scss
@@ -1,6 +1,3 @@
-$side_nav-color: #000000;
-$side-nav-word-color: #818181;
-$side-nav-word-hover-color: #f1f1f1;
 $th-color:#ddd;
 $white: white;
 $page-background-color: rgb(222, 223, 211);
@@ -10,57 +7,19 @@ $tr-color:#f8f8f8;
 $edit-color: rgb(243, 99, 99);
 $delete-color: rgb(101, 101, 219);
 $lightslategrey: lightslategrey;
-$side-nav-color: rgb(86, 86, 131);
 
-.app-module {
-  background-color: $white;
-  height: 95.5%;
-  .sidenav {
-    background-color: $side-nav-color;
-    padding-top: 20px;
-    width: 15%;
-  }
-  .side-nav-i {
-    margin-left: 20px;
-    color: $white;
-    display: inline-block;
-    font-size: 30px;
-    cursor: pointer;
-  }
-  .logout {
-    cursor: pointer;
-    margin-left: 15px;    
-    text-decoration: none;
-    font-size: 23px;
-    margin-top: 770%;
-    color: $side-nav-word-color;
-    display: inline-block;
-  }
-  .side-nav-a-div {
-    display: inline-block;
-    padding-bottom: 20px;
-  }
-  .side-nav-a {
-    cursor: pointer;
-    margin-left: 25px;    
-    font-size: 23px;
-    text-decoration: none;
-    color: $side-nav-word-color;
-  }
-  .sidenav a:hover {
-    color: $side-nav-word-hover-color;
-  }
   .display {
+    display: inline-block;
+    height: 51rem;
     table {
-      margin-left: 15%;
       border: 1px solid $th-color;
       margin-top: 2px;
+      width: 55rem;
     }
     td {
       background-color: $th-color;
     }
     th, td {
-      width: 18.5%;
       font-size: 20px;
     }
     th {
@@ -82,7 +41,7 @@ $side-nav-color: rgb(86, 86, 131);
       color: $delete-color;
     }
     i {
+      padding-right: 10px;
       cursor: pointer;
     } 
   }
-}
