--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,6 +1,5 @@
 .bg-img {
   background-image: url("/assets/images/plain.jpg");
-  height: 93.9%;
   background-repeat: no-repeat;
   background-size: 100%;
 }
@@ -13,7 +12,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 25%;
-  height: 21rem;
+  height: 22rem;
   background-color: #ddd;
 }
 
@@ -56,41 +55,44 @@
   font-size: 18px;
   margin-left: 36%;
   margin-bottom: 10px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 @media only screen and (min-width: 1024px) {
   .bg-img {
-    background-size: 150%;
-    height: 95.5%;
+    background-size: 100%;
+    height: 51.7rem;
+  }
+  .bg-img .login form {
+    width: 26%;
   }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .bg-img {
-    background-size: 210%;
-    height: 95.9%;
+    background-size: 360%;
+    height: 62rem;
   }
   .bg-img .login form {
-    width: 37%;
+    width: 39%;
   }
 }
 
 @media only screen and (min-width: 600px) and (max-width: 767px) {
   .bg-img {
     background-size: 270%;
-    height: 95.7%;
+    height: 62rem;
   }
   .bg-img .login form {
-    width: 42%;
+    width: 52%;
   }
 }
 
 @media only screen and (min-width: 321px) and (max-width: 599px) {
   .bg-img {
     background-size: 390%;
-    height: 96%;
+    height: 62rem;
   }
   .bg-img .login form {
     width: 82%;
@@ -99,11 +101,11 @@
 
 @media only screen and (max-width: 320px) {
   .bg-img {
-    background-size: 380%;
-    height: 95%;
+    background-size: 650%;
+    height: 85rem;
   }
   .bg-img .login form {
-    width: 83%;
+    width: 87%;
     height: 21rem;
   }
   .bg-img .login form .form-div .input-field {
