--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -8,16 +8,16 @@ $blue : blue;
 
 .bg-img {
   background-image: url('/assets/images/plain.jpg');
-  height: 93.9%;
   background-repeat: no-repeat;
   background-size: 100%;
+  height: 51.7rem;
   .login {
     padding-top: 6%;
     form {
       margin-left: auto;
       margin-right: auto;
       width: 25%;
-      height: 21rem;
+      height: 22rem;
       background-color: $form-background-color;
       h1 {
         height: 3rem;
@@ -53,7 +53,7 @@ $blue : blue;
           font-size: 18px;
           margin-left: 36%;
           margin-bottom: 10px;
-          margin-top: 10px;        
+          margin-top: 20px;        
         }
       }
     }
@@ -62,32 +62,36 @@ $blue : blue;
 
 @media only screen and (min-width:1024px) {
   .bg-img {
-    background-size: 150%;
-    height: 95.5%;
+    background-size: 100%;
+    height: 51.7rem;
+    .login {
+      form {
+        width: 26%;
+      }
+    }
   }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 768px) and (max-width:1023px)  {
   .bg-img {
-   background-size: 210%;
-    height: 95.9%;
+   background-size: 360%;
+   height: 62rem;
     .login {
       form {
-        width: 37%;
+        width: 39%;
       }
     }
   } 
 }
 
-
 @media only screen and (min-width: 600px) and (max-width:767px) {
   .bg-img {
     background-size: 270%;
-    height: 95.7%;
+    height: 62rem;
     .login {
       form {
-        width: 42%;
+        width: 52%;
       }
     }
   }
@@ -97,7 +101,7 @@ $blue : blue;
 @media only screen and (min-width:321px) and (max-width:599px) {
   .bg-img {
     background-size: 390%;
-    height: 96%;
+    height: 62rem;
     .login {
       form {
         width: 82%;
@@ -109,11 +113,11 @@ $blue : blue;
 //Mobile phones
 @media only screen and (max-width:320px) {
   .bg-img {
-    background-size: 380%;
-    height: 95%;
+    background-size: 650%;
+    height: 85rem;
     .login {
       form {
-        width: 83%;
+        width: 87%;
         height: 21rem;
         .form-div {
           .input-field {  
